// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UriResolver get background 1`] = `
Object {
  "@type": "ImageObject",
  "author": Object {
    "@id": "/data/john smith.yml",
  },
  "contentSize": "51 kB",
  "contentUrl": "/data/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "name": "My background",
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/data/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "url": "https://example.com/data/images/image2-50.webp",
      "width": 75,
    },
  ],
  "url": "https://example.com/data/images/image2.webp",
  "width": 500,
}
`;

exports[`UriResolver get blog1 1`] = `
Object {
  "@type": "BlogPosting",
  "author": Object {
    "@id": "/data/john smith.yml",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "image": Object {
    "@id": "https://via.placeholder.com/300",
  },
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver get collections/tags 1`] = `
Array [
  Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "url": "/",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "headline": "Natively support schema.org json-ld",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Generate both HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Build UI themes based on the semantic meaning of your data",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "2 kB",
      "contentUrl": "https://via.placeholder.com/300",
      "encodingFormat": "image/png",
      "height": 300,
      "url": "https://via.placeholder.com/300",
      "width": 300,
    },
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
    "url": "/blogs/blog1",
  },
  Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "url": "/",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "headline": "Natively support schema.org json-ld",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Generate both HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Build UI themes based on the semantic meaning of your data",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2017-10-26T00:00:00.000Z,
    "dateModified": 2017-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My second blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "51 kB",
      "contentUrl": "/data/images/image2.webp",
      "encodingFormat": "image/webp",
      "height": 333,
      "thumbnail": Array [
        Object {
          "@type": "ImageObject",
          "contentSize": "1 kB",
          "contentUrl": "/data/images/image2-50.webp",
          "encodingFormat": "image/webp",
          "height": 50,
          "url": "https://example.com/data/images/image2-50.webp",
          "width": 75,
        },
      ],
      "url": "https://example.com/data/images/image2.webp",
      "width": 500,
    },
    "keywords": Array [
      "sambal",
      "java script",
    ],
    "position": 2,
    "text": "

Hello world2",
    "url": "/blogs/blog2",
  },
]
`;

exports[`UriResolver get image2 1`] = `
Object {
  "@type": "ImageObject",
  "contentSize": "51 kB",
  "contentUrl": "/data/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/data/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "url": "https://example.com/data/images/image2-50.webp",
      "width": 75,
    },
  ],
  "url": "https://example.com/data/images/image2.webp",
  "width": 500,
}
`;

exports[`UriResolver get johnsmith 1`] = `
Object {
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "hasOfferCatalog": Object {
    "@type": "OfferCatalog",
    "itemListElement": Array [
      Object {
        "@id": "https://www.sambal.dev/schema.json",
      },
    ],
    "name": "Open source software",
  },
  "name": "John Smith",
}
`;

exports[`UriResolver hydrate background 1`] = `
Object {
  "@type": "ImageObject",
  "author": Object {
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "hasOfferCatalog": Object {
      "@type": "OfferCatalog",
      "itemListElement": Array [
        Object {
          "@context": Object {
            "@base": "https://sambal.dev",
            "@vocab": "https://schema.org/",
          },
          "@id": "/schema.json",
          "@type": "SoftwareSourceCode",
          "alternativeHeadline": "A linked data static site generator",
          "codeRepository": "https://github.com/chen4119/sambal",
          "headline": "Sambal",
          "potentialAction": Array [
            Object {
              "@type": "Action",
              "name": "Get Started",
              "target": "/docs/get-started",
            },
          ],
          "programmingLanguage": "Typescript",
          "url": "/",
          "usageInfo": Array [
            Object {
              "@type": "HowToTip",
              "headline": "Natively support schema.org json-ld",
            },
            Object {
              "@type": "HowToTip",
              "headline": "Generate both HTML and schema.org json-ld files",
            },
            Object {
              "@type": "HowToTip",
              "headline": "Build UI themes based on the semantic meaning of your data",
            },
          ],
        },
      ],
      "name": "Open source software",
    },
    "name": "John Smith",
  },
  "contentSize": "51 kB",
  "contentUrl": "/data/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "name": "My background",
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/data/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "url": "https://example.com/data/images/image2-50.webp",
      "width": 75,
    },
  ],
  "url": "https://example.com/data/images/image2.webp",
  "width": 500,
}
`;

exports[`UriResolver hydrate blog1 1`] = `
Object {
  "@type": "BlogPosting",
  "author": Object {
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "hasOfferCatalog": Object {
      "@type": "OfferCatalog",
      "itemListElement": Array [
        Object {
          "@context": Object {
            "@base": "https://sambal.dev",
            "@vocab": "https://schema.org/",
          },
          "@id": "/schema.json",
          "@type": "SoftwareSourceCode",
          "alternativeHeadline": "A linked data static site generator",
          "codeRepository": "https://github.com/chen4119/sambal",
          "headline": "Sambal",
          "potentialAction": Array [
            Object {
              "@type": "Action",
              "name": "Get Started",
              "target": "/docs/get-started",
            },
          ],
          "programmingLanguage": "Typescript",
          "url": "/",
          "usageInfo": Array [
            Object {
              "@type": "HowToTip",
              "headline": "Natively support schema.org json-ld",
            },
            Object {
              "@type": "HowToTip",
              "headline": "Generate both HTML and schema.org json-ld files",
            },
            Object {
              "@type": "HowToTip",
              "headline": "Build UI themes based on the semantic meaning of your data",
            },
          ],
        },
      ],
      "name": "Open source software",
    },
    "name": "John Smith",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "image": Object {
    "@type": "ImageObject",
    "contentSize": "2 kB",
    "contentUrl": "https://via.placeholder.com/300",
    "encodingFormat": "image/png",
    "height": 300,
    "url": "https://via.placeholder.com/300",
    "width": 300,
  },
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver hydrate header 1`] = `
Object {
  "@type": "WPHeader",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
    Object {
      "@type": "SiteNavigationElement",
      "name": "Docs",
      "url": "/get-started",
    },
    Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "My first blog",
        "url": "/blogs/blog1",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "My second blog",
        "url": "/blogs/blog2",
      },
    ],
  ],
  "headline": "Sambal",
  "potentialAction": Array [
    Object {
      "@type": "DownloadAction",
      "target": "https://github.com/chen4119/sambal",
    },
  ],
}
`;

exports[`UriResolver hydrate johnsmith 1`] = `
Object {
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "hasOfferCatalog": Object {
    "@type": "OfferCatalog",
    "itemListElement": Array [
      Object {
        "@context": Object {
          "@base": "https://sambal.dev",
          "@vocab": "https://schema.org/",
        },
        "@id": "/schema.json",
        "@type": "SoftwareSourceCode",
        "alternativeHeadline": "A linked data static site generator",
        "codeRepository": "https://github.com/chen4119/sambal",
        "headline": "Sambal",
        "potentialAction": Array [
          Object {
            "@type": "Action",
            "name": "Get Started",
            "target": "/docs/get-started",
          },
        ],
        "programmingLanguage": "Typescript",
        "url": "/",
        "usageInfo": Array [
          Object {
            "@type": "HowToTip",
            "headline": "Natively support schema.org json-ld",
          },
          Object {
            "@type": "HowToTip",
            "headline": "Generate both HTML and schema.org json-ld files",
          },
          Object {
            "@type": "HowToTip",
            "headline": "Build UI themes based on the semantic meaning of your data",
          },
        ],
      },
    ],
    "name": "Open source software",
  },
  "name": "John Smith",
}
`;
